--- a/barbershop/templates/barbershop/index.html
+++ b/barbershop/templates/barbershop/index.html
@@ -6,25 +6,27 @@
     <title>Minimal - Agência Digital</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
     <header class="hero">
         <nav class="navbar">
-            <div class="logo">T</div>
-            <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#services">SERVICES</a></li>
-                <li><a href="#portfolio">PORTFOLIO</a></li>
-                <li><a href="#about">ABOUT US</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
+            <div class="menu-horizontal">
+                <ul>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#services">SERVIÇOS</a></li>
+                    <li><a href="#portfolio">LOCALIZAÇÃO</a></li>
+                    <li><a href="#about">SOBRE NÓS</a></li>
+                </ul>
+            </div>
         </nav>
         <div class="hero-content">
-            <p>• WE ARE •</p>
-            <h1>MINIMAL</h1>
-            <p>DESIGN • DEVELOPMENT • SUCCESS</p>
+            <p><span class="barberia-moldura">• BARBEARIA •</span></p>
+            <h1>IMPERIUM</h1>
+            <p>BARBA • CABELO • BIGODE</p>
         </div>
+
     </header>
 
     <section id="services" class="section light-section">
